# cleansys

./: .gitignore  CHANGELOG.md  CHANGELOG_TUI_CHECKBOX.md  Cargo.toml  FINAL_IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  cliff.toml  demo_detailed_view.sh  demo_features.sh  justfile  test_chart_resize.sh  test_completion.sh  test_pie_chart.sh  test_resize.sh  test_stay_on_details.sh  test_system_cleaners.sh
.gitea/workflows/: release.yml  update-readme.yml
.github/ISSUE_TEMPLATE/: bug_report,md  feature_report.md
.github/workflows/: ci.yml  release.yml
demo/: demo-quick.tape  demo-showcase.tape  demo.tape  system-cleaners.tape  userland-cleaners.tape
docs/: CHECKBOX_USAGE_SUMMARY.md  CLEANUP_SUMMARY.md  SUDO_ELEVATION.md  TESTING.md  TUI_CHECKBOX_INTEGRATION.md
src/: app.rs  lib.rs  main.rs  menu.rs  pie_chart.rs  render.rs
src/cleaners/: cleaned_item.rs  mod.rs  system_cleaners.rs  user_cleaners.rs
src/components/: mod.rs  password_prompt.rs
src/core/: mod.rs  models.rs  services.rs
src/infrastructure/: security.rs  system.rs
src/ui/: app.rs  events.rs  mod.rs  render.rs  ui.rs
src/ui/tui/components/: mod.rs  pie_chart.rs
src/utils/: mod.rs  tests.rs
tests/: integration_tests.rs  password_prompt_tests.rs  utils_tests.rs
